# macbear_3d

./: .gitignore  .gitmodules  .pubignore  CHANGELOG.md  README.md  README_zh.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: deploy_web.yml
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/example/: glass_test.glb
example/lib/: 00_starter.dart  01_cube.dart  02_skybox.dart  03_primitives.dart  04_obj_teapot.dart  05_animated.dart  05_gltf.dart  06_shadowmap.dart  07_physics.dart  08_text_3d.dart  09_pbr_test.dart  10_terrain.dart  11_bvh.dart  12_video_texture.dart  main.dart  main_all.dart
example/web/: gles_bindings.js  index.html  manifest.json
ios/: macbear_3d.podspec
lib/: macbear_3d.dart
lib/builder/: shader_builder.dart
lib/src/: m3_internal.dart
m3_video_bridge/: .metadata  README.md  pubspec.yaml
m3_video_bridge/android/: build.gradle.kts  settings.gradle
m3_video_bridge/example/: README.md  pubspec.yaml
m3_video_bridge/ios/: m3_video_bridge.podspec
m3_video_bridge/lib/: m3_video_bridge_platform_interface.dart
m3_video_bridge/macos/: m3_video_bridge.podspec
m3_video_bridge/test/: m3_video_bridge_method_channel_test.dart  m3_video_bridge_test.dart
macos/: macbear_3d.podspec
macos/Classes/: M3VideoBridgePlugin.swift
test/: transform_test.dart
uml/: macbear_3d.puml
windows/: CMakeLists.txt  m3_video_bridge_plugin.cpp  m3_video_bridge_plugin.h  m3_video_bridge_plugin_c_api.cpp
windows/include/macbear_3d/: m3_video_bridge_plugin_c_api.h
(+166 files in other folders)
